# Projet_Manguille

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md
data/img/: comte_xelor.xcf  comte_yaarvin.xcf  empereur.xcf  fond 1.xcf  fond_4.xcf  menu_fond.xcf  menu_jouer.xcf  menu_quitter.xcf  ship.xcf  ship_x.xcf
data/music/: emperor's_theme.mmpz.bak  music_3.mmpz  music_3.mmpz.bak  music_loop .mmpz  music_loop .mmpz.bak  music_loop 1.mmpz  music_loop 2.mmpz  music_loop 2.mmpz.bak  music_loop 4.mmpz  music_loop 4.mmpz.bak  music_loop 5.mmpz  music_loop 5.mmpz.bak  music_loop 6.mmpz  music_loop 6.mmpz.bak  music_loop 7.mmpz  music_loop 7.mmpz.bak  music_loop 8.mmpz  music_loop_2.mmpz  music_loop_3.mmpz  xelor's_theme.mmpz  xelor's_theme.mmpz.bak  yaarvin's_theme.mmpz  yaarvin's_theme.mmpz.bak
data/structure/: structure du jeu
include/: BattleScene.hpp  BossShip.hpp  Controller.hpp  EnemyShip.hpp  Entity.hpp  Game.hpp  KeyboardController.hpp  Menu.hpp  Missile.hpp  MusicLoader.hpp  PlayerShip.hpp  Scene.hpp  Ship.hpp  StoryScene.hpp  TextureLoader.hpp  global.hpp
src/: BattleScene.cpp  BossShip.cpp  Controller.cpp  EnemyShip.cpp  Entity.cpp  Game.cpp  KeyboardController.cpp  Menu.cpp  Missile.cpp  MusicLoader.cpp  PlayerShip.cpp  Scene.cpp  Ship.cpp  StoryScene.cpp  TextureLoader.cpp  manguille.cpp
